--- a/.config/qtile/README.org
+++ b/.config/qtile/README.org
@@ -243,7 +243,7 @@ keys = [
                  desc='Search various search engines via dmenu'
                  ),
              Key([], "p",
-                 lazy.spawn(dmscripts + "dm-bw"),
+                 lazy.spawn(dmscripts + "dm-rbw"),
                  desc='Retrieve passwords with dmenu'
                  ),
          ])
