--- a/.config/qtile/README.org
+++ b/.config/qtile/README.org
@@ -309,7 +309,8 @@ Settings that I use in most layouts, so I'm defining them one time here.
 #+BEGIN_SRC python
 layout_theme = {"border_width": 2,
                 "margin": 4,
-                "border_focus": "e1acff",
+                "border_focus": "51afef",
+                # "border_focus": "e1acff",
                 "border_normal": "1D2330"
                 }
 #+END_SRC
