--- a/.config/qtile/README.org
+++ b/.config/qtile/README.org
@@ -103,7 +103,7 @@ keys = [
              desc='Run Launcher'
              ),
          Key([mod], "f",
-             lazy.spawn(myTerm + " lf"),
+             lazy.spawn(myTerm + " lfub"),
              desc='lf- File Manager'
              ),
          Key([mod], "b",
