--- a/.config/qtile/README.org
+++ b/.config/qtile/README.org
@@ -273,6 +273,10 @@ keys = [
                  lazy.spawn(dmscripts + "dm-rbw"),
                  desc='Retrieve passwords with dmenu'
                  ),
+             Key([], "n",
+                 lazy.spawn(dmscripts + "dm-network"),
+                 desc='Network Manger Script'
+                 ),
          ])
 ]
 #+END_SRC
