--- a/.config/qtile/README.org
+++ b/.config/qtile/README.org
@@ -286,7 +286,7 @@ Groups are really workspaces.
 
 #+BEGIN_SRC python
 groups = [Group("DEV", matches=[Match(wm_class=["vscodium"])], layout='max'),
-          Group("WWW", matches=[Match(wm_class=["vivaldi-stable"])], layout='max'),
+          Group("WWW", matches=[Match(wm_class=["vivaldi-stable","brave-browser"])], layout='max'),
           Group("SYS", layout='max'),
           Group("DOC", layout='max'),
           Group("VBOX", layout='max'),
